# fingerprint-client

./: .gitmodules  CMakeLists.txt  README.md  main.c
include/: device.h  fingerprint.h  server.h
include/protocols/: about_protocol.h  image_protocol.h
www/: index.html
